fix: Sep 17 - scroll shift layout issues

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -1,5 +1,5 @@
 // $menu-expanded
-$header-padding: 6rem;
+$header-padding: 4rem;
 
 body {
   --color-menu-active: #e56916;
